// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cases utilities accommodationCell for current accommodation returns a formatted cell for a CAS1 accommodation 1`] = `
"Approved Premises (CAS1)<br>
  <span class="govuk-hint">until 3 February 2026</span><br>
  55 days left
"
`;

exports[`cases utilities accommodationCell for current accommodation returns a formatted cell for a CAS2 accommodation 1`] = `
"CAS2 for HDC<br>
  <span class="govuk-hint">until 12 March 2026</span><br>
  92 days left
"
`;

exports[`cases utilities accommodationCell for current accommodation returns a formatted cell for a CAS2v2 accommodation 1`] = `
"CAS2 for Bail<br>
  <span class="govuk-hint">until 23 May 2026</span><br>
  164 days left
"
`;

exports[`cases utilities accommodationCell for current accommodation returns a formatted cell for a CAS3 accommodation 1`] = `
"Temporary Accommodation (CAS3)<br>
  <span class="govuk-hint">until 31 July 2026</span><br>
  233 days left
"
`;

exports[`cases utilities accommodationCell for current accommodation returns a formatted cell for a No fixed abode accommodation 1`] = `
"No fixed abode<br>
  <span class="govuk-hint">until 10 September 2026</span><br>
  274 days left
"
`;

exports[`cases utilities accommodationCell for current accommodation returns a formatted cell for a Prison (no qualifier) accommodation 1`] = `
"HMP Foobar<br>
  <span class="govuk-hint">until 11 December 2025</span><br>
  1 day left
"
`;

exports[`cases utilities accommodationCell for current accommodation returns a formatted cell for a Prison accommodation 1`] = `
"HMP Foobar (licence)<br>
  <span class="govuk-hint">until 1 January 2026</span><br>
  22 days left
"
`;

exports[`cases utilities accommodationCell for current accommodation returns a formatted cell for a Private address accommodation 1`] = `
"Private address (bail)<br>Parents' home (settled)<br>
  <span class="govuk-hint">until 10 September 2026</span><br>
  274 days left
"
`;

exports[`cases utilities accommodationCell for next accommodation returns a formatted cell for a CAS1 accommodation 1`] = `
"Approved Premises (CAS1)
  <br>
  <span class="govuk-hint">from 3 February 2026</span>
"
`;

exports[`cases utilities accommodationCell for next accommodation returns a formatted cell for a CAS2 accommodation 1`] = `
"CAS2 for HDC
  <br>
  <span class="govuk-hint">from 12 March 2026</span>
"
`;

exports[`cases utilities accommodationCell for next accommodation returns a formatted cell for a CAS2v2 accommodation 1`] = `
"CAS2 for Bail
  <br>
  <span class="govuk-hint">from 23 May 2026</span>
"
`;

exports[`cases utilities accommodationCell for next accommodation returns a formatted cell for a CAS3 accommodation 1`] = `
"Temporary Accommodation (CAS3)
  <br>
  <span class="govuk-hint">from 31 July 2026</span>
"
`;

exports[`cases utilities accommodationCell for next accommodation returns a formatted cell for a No fixed abode accommodation 1`] = `
"No fixed abode
  <br>
  <span class="govuk-hint">from 10 September 2026</span>
"
`;

exports[`cases utilities accommodationCell for next accommodation returns a formatted cell for a Prison (no qualifier) accommodation 1`] = `
"HMP Foobar
  <br>
  <span class="govuk-hint">from 11 December 2025</span>
"
`;

exports[`cases utilities accommodationCell for next accommodation returns a formatted cell for a Prison accommodation 1`] = `
"HMP Foobar (licence)
  <br>
  <span class="govuk-hint">from 1 January 2026</span>
"
`;

exports[`cases utilities accommodationCell for next accommodation returns a formatted cell for a Private address accommodation 1`] = `
"Private address (bail)<br>Parents' home (settled)
  <br>
  <span class="govuk-hint">from 10 September 2026</span>
"
`;

exports[`cases utilities personCell returns a formatted cell for a given person 1`] = `
"

<div class="sas-person-cell">
  <div class="govuk-!-margin-bottom-2">
    <a class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold" href="/cases/C321654">Dave Foo</a>
  </div>

  <dl class="sas-risk-tags govuk-!-margin-0 govuk-!-margin-bottom-1">
    
  

  <div class="sas-risk-tag sas-risk-tag--very-high">
    <dt>RoSH</dt>
    <dd>Very high</dd>
  </div>

    <div class="sas-risk-tag sas-risk-tag--tier">
      <dt>Tier</dt>
      <dd>B2</dd>
    </div>
  </dl>

  <dl class="sas-person-details govuk-!-margin-0">
    <div>
      <dt>Date of birth</dt>
      <dd>9 October 1980 (45)</dd>
    </div>
    <div>
      <dt>CRN</dt>
      <dd>C321654</dd>
    </div>
    <div>
      <dt>Prison number</dt>
      <dd>A1234BC</dd>
    </div>
  </dl>
</div>
"
`;

exports[`cases utilities referralHistoryTable returns an empty table when there are no referrals 1`] = `
"


<div class="govuk-summary-card">
    <div class="govuk-summary-card__title-wrapper">
        <h2 class="govuk-summary-card__title">
            Referral history
        </h2>
    </div>
    <div class="govuk-summary-card__content">
        
            <p class="govuk-body">No previous referrals</p>
        
    </div>
</div>"
`;

exports[`cases utilities referralHistoryTable returns referral history table for a given list of referrals 1`] = `
"


<div class="govuk-summary-card">
    <div class="govuk-summary-card__title-wrapper">
        <h2 class="govuk-summary-card__title">
            Referral history
        </h2>
    </div>
    <div class="govuk-summary-card__content">
        
            <div class="govuk-summary-list">
                <table class="govuk-table">


  <thead class="govuk-table__head">
    <tr class="govuk-table__row">
    
      <th scope="col" class="govuk-table__header">Type</th>
    
      <th scope="col" class="govuk-table__header">Status</th>
    
      <th scope="col" class="govuk-table__header">Date</th>
    
      <th scope="col" class="govuk-table__header"></th>
    
    </tr>
  </thead>

  <tbody class="govuk-table__body">

  
    <tr class="govuk-table__row">
    
      
      
      <th scope="row" class="govuk-table__header">CAS1</th>
      
    
      
      
      <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">Accepted</strong></td>
      
    
      
      
      <td class="govuk-table__cell">15 January 2023</td>
      
    
      
      
      <td class="govuk-table__cell">
    <div class="govuk-summary-list__actions govuk-!-padding-0">
        <span class="govuk-table-span govuk-body">
            <ul class="govuk-summary-list__actions-list govuk-!-margin-0">
                
                    <li class="govuk-summary-list__actions-list-item">
                        <a class="govuk-link govuk-link--no-visited-state" href="#">View</a>
                    </li>
                
            </ul>
        </span>
    </div>
</td>
      
    
    </tr>
  

  
    <tr class="govuk-table__row">
    
      
      
      <th scope="row" class="govuk-table__header">CAS2</th>
      
    
      
      
      <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--yellow">Pending</strong></td>
      
    
      
      
      <td class="govuk-table__cell">20 February 2023</td>
      
    
      
      
      <td class="govuk-table__cell">
    <div class="govuk-summary-list__actions govuk-!-padding-0">
        <span class="govuk-table-span govuk-body">
            <ul class="govuk-summary-list__actions-list govuk-!-margin-0">
                
                    <li class="govuk-summary-list__actions-list-item">
                        <a class="govuk-link govuk-link--no-visited-state" href="#">View</a>
                    </li>
                
            </ul>
        </span>
    </div>
</td>
      
    
    </tr>
  

  </tbody>
</table>

            </div>
        
    </div>
</div>"
`;
